// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rule simplifier converts VERTICAL and HORIZONTAL at the beginning of a rule into 2 rules 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY PrettyHorizWall",
    ],
    Array [],
    Array [],
  ],
  Array [
    Array [
      "STATIONARY SimpleWall",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY PrettyVertWall",
    ],
  ],
  Array [
    Array [
      "STATIONARY SimpleWall",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [],
  ],
  Array [
    Array [],
    Array [
      "STATIONARY PrettyHorizWall",
    ],
    Array [],
    Array [
      "STATIONARY SimpleWall",
    ],
  ],
]
`;

exports[`Rule simplifier expands MOVING in multiple brackets into simple UP DOWN LEFT RIGHT ACTION rules 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
  Array [
    Array [
      "STATIONARY Shadow",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`Rule simplifier expands MOVING into simple UP DOWN LEFT RIGHT ACTION rules 1`] = `
Array [
  Array [
    Array [],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
  Array [
    Array [
      "STATIONARY Shadow",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;
